--- a/public/course.html
+++ b/public/course.html
@@ -130,12 +130,13 @@
           <h3 class="text-2xl font-semibold text-gray-100 mb-4">Підготовка до ЗНО/НМТ</h3>
           <p class="text-gray-400 mb-4">Інтенсивний курс для успішного складання ЗНО/НМТ. Покриваємо всі теми: алгебра, геометрія, тригонометрія, ймовірність.</p>
           <ul class="list-disc list-inside text-gray-400 mb-6 space-y-2">
-            <li>Формат: групові (до 8 учнів) або індивідуальні заняття</li>
+            <li>Формат: групові (до 8 учнів) або індивідуальні заняття  </li>
+            <li>Тривалість заняття: 55 хвилин </li>
             <li>Тривалість: 9 місяців (групові), гнучкий графік (індивидуальні)</li>
             <li>Практика: тести, задачі, симуляції іспитів</li>
           </ul>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Розклад</h4>
-          <p class="text-gray-400 mb-4">Групові: Вт, Чт 18:00–19:00; Індивидуальні: за домовленістю</p>
+          <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам цекілька варіанті ви можете обрати той що підходить саме вам ; Індивидуальні: за домовленістю</p>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Ціни</h4>
           <p class="text-gray-400 mb-6">Групові: 200 грн/заняття; Індивидуальні: 400 грн/заняття</p>
           <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900">
@@ -157,14 +158,15 @@
           <h3 class="text-2xl font-semibold text-gray-100 mb-4">Програми для 1–11 класів</h3>
           <p class="text-gray-400 mb-4">Покращення знань з математики, підготовка до контрольних робіт та іспитів. Індивідуальний підхід до кожного учня.</p>
           <ul class="list-disc list-inside text-gray-400 mb-6 space-y-2">
-            <li>Формат: групові (до 10 учнів) або індивідуальні заняття</li>
+            <li>Формат: індивідуальні заняття</li>
+            <li>Тривалість заняття: 55 хвилин</li>
             <li>Теми: арифметика, алгебра, геометрія, логіка</li>
             <li>Практика: задачі, інтерактивні вправи, домашні завдання</li>
           </ul>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Розклад</h4>
-          <p class="text-gray-400 mb-4">Групові: Пн, Ср 17:00–18:00; Індивидуальні: за домовленістю</p>
+          <p class="text-gray-400 mb-4">Індивидуальні: за домовленістю</p>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Ціни</h4>
-          <p class="text-gray-400 mb-6">Групові: 200 грн/заняття; Індивидуальні: 400 грн/заняття</p>
+          <p class="text-gray-400 mb-6">Індивидуальні: 300 грн/заняття</p>
           <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900">
             <h4 class="text-lg font-semibold text-gray-100 mb-4">Запис на курс</h4>
             <div class="space-y-4">
@@ -194,11 +196,12 @@
           <p class="text-gray-400 mb-4">Веселе введення в програмування через створення ігор та анімацій. Ідеально для дітей 9–12 років.</p>
           <ul class="list-disc list-inside text-gray-400 mb-6 space-y-2">
             <li>Формат: групові (до 8 учнів) або індивідуальні заняття</li>
+            <li>Тривалість заняття: 1,5 години</li>
             <li>Практика: створення ігор, анімацій, історій</li>
             <li>Тривалість: 3 місяці (групові), гнучкий графік (індивидуальні)</li>
           </ul>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Розклад</h4>
-          <p class="text-gray-400 mb-4">Групові: Сб, Нд 10:00–11:30; Індивидуальні: за домовленістю</p>
+          <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам цекілька варіанті ви можете обрати той що підходить саме вам; Індивидуальні: за домовленістю</p>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Ціни</h4>
           <p class="text-gray-400 mb-6">Групові: 200 грн/заняття; Індивидуальні: 400 грн/заняття</p>
           <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900">
@@ -221,11 +224,12 @@
           <p class="text-gray-400 mb-4">Вивчення Python через практичні проєкти: від основ до створення власних програм.</p>
           <ul class="list-disc list-inside text-gray-400 mb-6 space-y-2">
             <li>Формат: групові (до 8 учнів) або індивідуальні заняття</li>
+            <li>Тривалість заняття: 1,5 години</li>
             <li>Практика: створення ігор, аналіз даних, автоматизація</li>
             <li>Тривалість: 6 місяців (групові), гнучкий графік (індивидуальні)</li>
           </ul>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Розклад</h4>
-          <p class="text-gray-400 mb-4">Групові: Вт, Пт 19:00–20:30; Індивидуальні: за домовленістю</p>
+          <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам цекілька варіанті ви можете обрати той що підходить саме вам ; Індивидуальні: за домовленістю</p>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Ціни</h4>
           <p class="text-gray-400 mb-6">Групові: 200 грн/заняття; Індивидуальні: 400 грн/заняття</p>
           <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900">
@@ -248,11 +252,12 @@
           <p class="text-gray-400 mb-4">Створення власних сайтів із використанням HTML, CSS та JavaScript. Практика від простих сторінок до інтерактивних проєктів.</p>
           <ul class="list-disc list-inside text-gray-400 mb-6 space-y-2">
             <li>Формат: групові (до 8 учнів) або індивідуальні заняття</li>
+            <li>Тривалість заняття: 1,5 години</li>
             <li>Практика: створення сайтів, анімацій, інтерактивних елементів</li>
             <li>Тривалість: 4 місяці (групові), гнучкий графік (індивидуальні)</li>
           </ul>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Розклад</h4>
-          <p class="text-gray-400 mb-4">Групові: Ср, Пт 18:00–19:30; Індивидуальні: за домовленістю</p>
+          <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам цекілька варіанті ви можете обрати той що підходить саме вам !; Індивидуальні: за домовленістю</p>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Ціни</h4>
           <p class="text-gray-400 mb-6">Групові: 200 грн/заняття; Індивидуальні: 400 грн/заняття</p>
           <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900">
@@ -278,9 +283,8 @@
     <div class="container mx-auto px-4 grid grid-cols-1 md:grid-cols-3 gap-8">
       <div>
         <h3>Контакти</h3>
-        <p class="text-white">📞 +380 123 456 789</p>
-        <p class="text-white">📧 info@skillbridge.ua</p>
-        <p class="text-white">Telegram: @SkillBridge</p>
+        <p class="text-white">📧 info:SkillBridgeUA@gmail.com</p>
+        <p class="text-white">Telegram: @SkillBridgeUA</p>
         <p class="text-white">Instagram: @SkillBridgeUA</p>
       </div>
       <div>
