--- a/public/account.html
+++ b/public/account.html
@@ -13,8 +13,8 @@
         }
 
         body {
-            background-color: #f8f9fa;
-            color: #212529;
+            background-color: #071a3a; /* Deep, rich blue background */
+            color: #e0eaff; /* Light blue text for better contrast */
             line-height: 1.6;
         }
 
@@ -25,10 +25,10 @@
         }
 
         header {
-            background-color: #007bff;
-            color: white;
+            background-color: #1e40af; /* Vibrant indigo header */
+            color: #ffffff;
             padding: 1rem 0;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
             position: sticky;
             top: 0;
             z-index: 1000;
@@ -46,7 +46,7 @@
         }
 
         nav a {
-            color: white;
+            color: #ffffff;
             text-decoration: none;
             margin-left: 1.5rem;
             font-size: 1rem;
@@ -54,7 +54,7 @@
         }
 
         nav a:hover {
-            color: #e0e0e0;
+            color: #93c5fd; /* Bright blue hover effect */
         }
 
         main {
@@ -63,35 +63,36 @@
         }
 
         .profile {
-            background: white;
+            background: #1e3a8a; /* Deep blue profile card */
             border-radius: 10px;
             padding: 2rem;
             max-width: 600px;
             margin: 0 auto;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
         }
 
         .profile h2 {
             font-size: 1.8rem;
             margin-bottom: 1.5rem;
-            color: #007bff;
+            color: #3b82f6; /* Bright blue for headings */
             text-align: center;
         }
 
         .profile-info h3 {
             font-size: 1.4rem;
             margin: 1.5rem 0 0.8rem;
-            color: #343a40;
+            color: #bfdbfe; /* Light blue for subheadings */
         }
 
         .profile-info p {
             margin-bottom: 0.8rem;
             font-size: 1rem;
-            color: #495057;
+            color: #93c5fd; /* Soft blue for text */
         }
 
         .profile-info p span {
             font-weight: 500;
+            color: #e0eaff; /* Light blue for emphasized text */
         }
 
         .profile-info ul {
@@ -101,28 +102,46 @@
 
         .profile-info ul li {
             margin-bottom: 1.2rem;
-            padding: 0.8rem;
-            background: #f1f3f5;
-            border-radius: 5px;
+            padding: 1rem;
+            background: #2b4c9b; /* Slightly lighter blue for course items */
+            border-radius: 8px;
             transition: background 0.2s;
         }
 
         .profile-info ul li:hover {
-            background: #e9ecef;
+            background: #3b82f6; /* Bright blue on hover */
         }
 
-        .profile-info ul li a {
-            color: #007bff;
+        .course-buttons {
+            display: flex;
+            gap: 1rem;
+            margin-top: 0.5rem;
+        }
+
+        .course-button {
+            display: inline-block;
+            padding: 0.5rem 1rem;
+            background-color: #2563eb; /* Vibrant blue for buttons */
+            color: #ffffff;
             text-decoration: none;
+            border-radius: 5px;
+            font-size: 0.9rem;
+            transition: background-color 0.2s, transform 0.1s;
         }
 
-        .profile-info ul li a:hover {
-            text-decoration: underline;
+        .course-button:hover {
+            background-color: #1d3278; /* Darker blue on hover */
+            transform: translateY(-2px);
+        }
+
+        .course-button:disabled {
+            background-color: #405b99; /* Muted blue for disabled buttons */
+            cursor: not-allowed;
         }
 
         footer {
-            background-color: #343a40;
-            color: white;
+            background-color: #0f2a5f; /* Deep blue footer */
+            color: #e0eaff;
             padding: 2rem 0;
         }
 
@@ -141,10 +160,11 @@
         .footer-section h4 {
             font-size: 1.2rem;
             margin-bottom: 0.8rem;
+            color: #bfdbfe; /* Light blue for footer headings */
         }
 
         .footer-section p, .footer-section a {
-            color: #adb5bd;
+            color: #93c5fd; /* Soft blue for footer text */
             text-decoration: none;
             margin-bottom: 0.4rem;
             display: block;
@@ -152,14 +172,14 @@
         }
 
         .footer-section a:hover {
-            color: white;
+            color: #ffffff;
         }
 
         footer > p {
             text-align: center;
             margin-top: 1.5rem;
             font-size: 0.85rem;
-            color: #adb5bd;
+            color: #93c5fd; /* Soft blue for footer copyright */
         }
 
         @media (max-width: 768px) {
@@ -189,6 +209,11 @@
             .profile-info h3 {
                 font-size: 1.2rem;
             }
+
+            .course-buttons {
+                flex-direction: column;
+                gap: 0.5rem;
+            }
         }
     </style>
 </head>
@@ -197,10 +222,6 @@
         <div class="container">
             <h1>SkillBridge 🌟</h1>
             <nav>
-                <a href="index.html">Головна</a>
-                <a href="courses.html">Курси</a>
-                <a href="blog.html">Блог</a>
-                <a href="account.html">Профіль</a>
                 <a href="login.html">Вихід</a>
             </nav>
         </div>
@@ -271,20 +292,27 @@
                     return;
                 }
 
-                // Відображення даних
+                // Відображення даних користувача
                 document.querySelector('#user-name').textContent = data.name || 'Користувач';
                 document.querySelector('#user-name-display').textContent = data.name || 'Користувач';
                 document.querySelector('#user-email').textContent = data.email || 'Немає даних';
 
+                // Відображення курсів
                 const coursesList = document.querySelector('#user-courses');
-                coursesList.innerHTML = ''; // Очищення списку
+                coursesList.innerHTML = '';
                 if (data.courses && data.courses.length > 0) {
                     data.courses.forEach(course => {
                         const li = document.createElement('li');
                         li.innerHTML = `
-                            <strong>${course.name || 'Без назви'}</strong><br>
-                            Посилання на зустріч: <a href="${course.meetLink || '#'}" target="_blank">${course.meetLink || 'Немає посилання'}</a><br>
-                            Матеріали: <a href="${course.materialsLink || '#'}" target="_blank">${course.materialsLink || 'Немає матеріалів'}</a>
+                            <strong>${course.name || 'Без назви'}</strong>
+                            <div class="course-buttons">
+                                <a href="${course.meetLink || '#'}" class="course-button" target="_blank" ${!course.meetLink ? 'disabled' : ''}>
+                                    До зустрічі
+                                </a>
+                                <a href="${course.materialsLink || '#'}" class="course-button" target="_blank" ${!course.materialsLink ? 'disabled' : ''}>
+                                    Матеріали
+                                </a>
+                            </div>
                         `;
                         coursesList.appendChild(li);
                     });
