--- a/public/course.html
+++ b/public/course.html
@@ -88,12 +88,12 @@
       <a href="/" class="text-2xl font-bold">SkillBridge 🌟</a>
       <div class="hidden md:flex space-x-6">
         <a href="home.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Головна</a>
-                    <a href="about.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Про нас</a>
-                    <a href="course.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Курси</a>
-                    <a href="math.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Математика</a>
-                    <a href="programming.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Програмування</a>
-                    <a href="blog.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Блог</a>
-                    <a href="login.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Особистий кабінет</a>
+        <a href="about.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Про нас</a>
+        <a href="course.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Курси</a>
+        <a href="math.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Математика</a>
+        <a href="programming.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Програмування</a>
+        <a href="blog.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Блог</a>
+        <a href="login.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Особистий кабінет</a>
       </div>
       <button id="hamburger-btn" class="md:hidden flex flex-col space-y-1 hamburger">
         <div class="bar1 w-6 h-1 bg-white rounded"></div>
@@ -103,12 +103,12 @@
     </div>
     <div id="mobile-menu" class="md:hidden menu-slide mt-4 px-4 bg-gray-800 rounded-lg">
       <a href="home.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Головна</a>
-                    <a href="about.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Про нас</a>
-                    <a href="course.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Курси</a>
-                    <a href="math.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Математика</a>
-                    <a href="programming.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Програмування</a>
-                    <a href="blog.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Блог</a>
-                    <a href="login.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Особистий кабінет</a>
+      <a href="about.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Про нас</a>
+      <a href="course.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Курси</a>
+      <a href="math.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Математика</a>
+      <a href="programming.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Програмування</a>
+      <a href="blog.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Блог</a>
+      <a href="login.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Особистий кабінет</a>
     </div>
   </nav>
 
@@ -130,15 +130,18 @@
           <h3 class="text-2xl font-semibold text-gray-100 mb-4">Підготовка до ЗНО/НМТ</h3>
           <p class="text-gray-400 mb-4">Інтенсивний курс для успішного складання ЗНО/НМТ. Покриваємо всі теми: алгебра, геометрія, тригонометрія, ймовірність.</p>
           <ul class="list-disc list-inside text-gray-400 mb-6 space-y-2">
-            <li>Формат: групові (до 8 учнів) або індивідуальні заняття  </li>
-            <li>Тривалість заняття: 55 хвилин </li>
+            <li>Формат: групові (до 8 учнів) або індивідуальні заняття</li>
+            <li>Тривалість заняття: 55 хвилин</li>
             <li>Тривалість: 9 місяців (групові), гнучкий графік (індивидуальні)</li>
             <li>Практика: тести, задачі, симуляції іспитів</li>
           </ul>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Розклад</h4>
-          <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам цекілька варіанті ви можете обрати той що підходить саме вам ; Індивидуальні: за домовленістю</p>
+          <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам декілька варіантів, ви можете обрати той, що підходить саме вам; Індивидуальні: за домовленістю</p>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Ціни</h4>
-          <p class="text-gray-400 mb-6">Групові: 200 грн/заняття; Індивидуальні: 400 грн/заняття</p>
+          <p class="text-gray-400 mb-6">Групові: 250 грн/заняття; Індивидуальні: 400 грн/заняття</p>
+          <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900 mb-6">
+            <p class="text-lg font-semibold text-gray-100 text-center">Акція: якщо оплачується від 10 занять, то на кожне заняття знижка 50 грн!</p>
+          </div>
           <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900">
             <h4 class="text-lg font-semibold text-gray-100 mb-4">Запис на курс</h4>
             <div class="space-y-4">
@@ -166,7 +169,10 @@
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Розклад</h4>
           <p class="text-gray-400 mb-4">Індивидуальні: за домовленістю</p>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Ціни</h4>
-          <p class="text-gray-400 mb-6">Індивидуальні: 300 грн/заняття</p>
+          <p class="text-gray-400 mb-6">Індивидуальні: 350 грн/заняття</p>
+          <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900 mb-6">
+            <p class="text-lg font-semibold text-gray-100 text-center">Акція: якщо оплачується від 10 занять, то на кожне заняття знижка 50 грн!</p>
+          </div>
           <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900">
             <h4 class="text-lg font-semibold text-gray-100 mb-4">Запис на курс</h4>
             <div class="space-y-4">
@@ -201,9 +207,12 @@
             <li>Тривалість: 3 місяці (групові), гнучкий графік (індивидуальні)</li>
           </ul>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Розклад</h4>
-          <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам цекілька варіанті ви можете обрати той що підходить саме вам; Індивидуальні: за домовленістю</p>
+          <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам декілька варіантів, ви можете обрати той, що підходить саме вам; Індивидуальні: за домовленістю</p>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Ціни</h4>
-          <p class="text-gray-400 mb-6">Групові: 200 грн/заняття; Індивидуальні: 400 грн/заняття</p>
+          <p class="text-gray-400 mb-6">Групові: 250 грн/заняття; Індивидуальні: 400 грн/заняття</p>
+          <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900 mb-6">
+            <p class="text-lg font-semibold text-gray-100 text-center">Акція: якщо оплачується від 10 занять, то на кожне заняття знижка 50 грн!</p>
+          </div>
           <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900">
             <h4 class="text-lg font-semibold text-gray-100 mb-4">Запис на курс</h4>
             <div class="space-y-4">
@@ -229,9 +238,12 @@
             <li>Тривалість: 6 місяців (групові), гнучкий графік (індивидуальні)</li>
           </ul>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Розклад</h4>
-          <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам цекілька варіанті ви можете обрати той що підходить саме вам ; Індивидуальні: за домовленістю</p>
+          <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам декілька варіантів, ви можете обрати той, що підходить саме вам; Індивидуальні: за домовленістю</p>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Ціни</h4>
-          <p class="text-gray-400 mb-6">Групові: 200 грн/заняття; Індивидуальні: 400 грн/заняття</p>
+          <p class="text-gray-400 mb-6">Групові: 250 грн/заняття; Індивидуальні: 400 грн/заняття</p>
+          <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900 mb-6">
+            <p class="text-lg font-semibold text-gray-100 text-center">Акція: якщо оплачується від 10 занять, то на кожне заняття знижка 50 грн!</p>
+          </div>
           <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900">
             <h4 class="text-lg font-semibold text-gray-100 mb-4">Запис на курс</h4>
             <div class="space-y-4">
@@ -257,9 +269,12 @@
             <li>Тривалість: 4 місяці (групові), гнучкий графік (індивидуальні)</li>
           </ul>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Розклад</h4>
-          <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам цекілька варіанті ви можете обрати той що підходить саме вам !; Індивидуальні: за домовленістю</p>
+          <p class="text-gray-400 mb-4">Групові: ми пропонуємо вам декілька варіантів, ви можете обрати той, що підходить саме вам!; Індивидуальні: за домовленістю</p>
           <h4 class="text-lg font-semibold text-gray-100 mb-2">Ціни</h4>
-          <p class="text-gray-400 mb-6">Групові: 200 грн/заняття; Індивидуальні: 400 грн/заняття</p>
+          <p class="text-gray-400 mb-6">Групові: 250 грн/заняття; Індивидуальні: 400 грн/заняття</p>
+          <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900 mb-6">
+            <p class="text-lg font-semibold text-gray-100 text-center">Акція: якщо оплачується від 10 занять, то на кожне заняття знижка 50 грн!</p>
+          </div>
           <div class="max-w-md mx-auto bg-gray-800 rounded-xl p-6 shadow-lg border-2 border-blue-900">
             <h4 class="text-lg font-semibold text-gray-100 mb-4">Запис на курс</h4>
             <div class="space-y-4">
