--- a/public/course.html
+++ b/public/course.html
@@ -327,7 +327,7 @@
         }
 
         try {
-          const response = await fetch('http://localhost:3000/api/purchase', {
+          const response = await fetch('https://skillbridge-school-1.onrender.com/api/purchase', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ name, contact, format, course, date })
