--- a/public/register.html
+++ b/public/register.html
@@ -118,7 +118,7 @@
         }
 
         try {
-          const response = await fetch('http://localhost:3000/api/register', {
+          const response = await fetch('https://skillbridge-school-1.onrender.com/api/register', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ name, email, password, date }),
