--- a/public/about.html
+++ b/public/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Про нас | SkillBridge</title>
+  <title>Про нас | 3Go</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
@@ -92,7 +92,7 @@
   <!-- Навігація -->
   <nav class="fixed top-0 w-full bg-gradient-to-r from-blue-700 to-purple-600 text-white py-4 z-50 shadow-2xl">
     <div class="container mx-auto px-4 flex justify-between items-center">
-      <a href="/" class="text-2xl font-bold">SkillBridge 🌟</a>
+      <a href="/" class="text-2xl font-bold">3Go 🌟</a>
       <div class="hidden md:flex space-x-6">
         <a href="home.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Головна</a>
                     <a href="about.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Про нас</a>
@@ -123,7 +123,7 @@
   <section class="hero-bg text-white py-24">
     <div class="container mx-auto px-4">
       <h1 class="text-5xl font-extrabold mb-6 gradient-text">Про нас</h1>
-      <p class="text-xl max-w-3xl text-gray-300 leading-relaxed">SkillBridge — це освітня платформа, де поєднуються сучасне викладання математики та програмування. Ми допомагаємо учням не лише вчити, а й розуміти та створювати.</p>
+      <p class="text-xl max-w-3xl text-gray-300 leading-relaxed">3Go — це освітня платформа, де поєднуються сучасне викладання математики та програмування. Ми допомагаємо учням не лише вчити, а й розуміти та створювати.</p>
     </div>
   </section>
 
@@ -227,9 +227,9 @@
       <div>
         <h3>Контакти</h3>
         <p class="text-white">📞 +380 123 456 789</p>
-        <p class="text-white">📧 info@skillbridge.ua</p>
-        <p class="text-white">Telegram: @SkillBridge</p>
-        <p class="text-white">Instagram: @SkillBridgeUA</p>
+        <p class="text-white">📧 info@3Go.ua</p>
+        <p class="text-white">Telegram: @3Go</p>
+        <p class="text-white">Instagram: @3Go</p>
       </div>
       
       <div>
@@ -237,7 +237,7 @@
         <a href="privac.html" class="block text-white hover:text-blue-300 transition duration-200">Політика конфіденційності</a>
       </div>
     </div>
-    <p class="text-center mt-8 text-white">© 2025 SkillBridge. Усі права захищено.</p>
+    <p class="text-center mt-8 text-white">© 2025 3Go. Усі права захищено.</p>
   </footer>
 
   <script>
