--- a/public/account.html
+++ b/public/account.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ваш профіль - SkillBridge</title>
+    <title>Ваш профіль - 3Go</title>
     <style>
         * {
             margin: 0;
@@ -220,7 +220,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>SkillBridge 🌟</h1>
+            <h1>3Go 🌟</h1>
             <nav>
                 <a href="login.html">Вихід</a>
             </nav>
@@ -250,9 +250,9 @@
                 <div class="footer-section">
                     <h4>Контакти</h4>
                     <p>Телефон: +380 123 456 789</p>
-                    <p>Email: info@skillbridge.ua</p>
-                    <p>Telegram: @SkillBridge</p>
-                    <p>Instagram: @SkillBridgeUA</p>
+                    <p>Email: info@3Go.ua</p>
+                    <p>Telegram: @3Go</p>
+                    <p>Instagram: @3Go</p>
                 </div>
                 <div class="footer-section">
                     <h4>Інформація</h4>
