--- a/public/account_teachers.html
+++ b/public/account_teachers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Особистий кабінет викладача | SkillBridge</title>
+  <title>Особистий кабінет викладача | 3Go</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
@@ -28,7 +28,7 @@
 <body class="bg-gray-900 text-gray-100">
   <nav class="fixed top-0 w-full bg-gradient-to-r from-blue-700 to-purple-600 text-white py-4 z-50 shadow-2xl">
     <div class="container mx-auto px-4 flex justify-between items-center">
-      <a href="/" class="text-2xl font-bold">SkillBridge 🌟</a>
+      <a href="/" class="text-2xl font-bold">3Go 🌟</a>
       <div class="hidden md:flex space-x-6">
         <a href="login_teachers.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Особистий кабінет</a>
       </div>
@@ -77,17 +77,17 @@
     <div class="container mx-auto px-4 grid grid-cols-1 md:grid-cols-3 gap-8">
       <div>
         <h3>Контакти</h3>
-        <p class="text-white">📞 +380 123 456 789</p>
-        <p class="text-white">📧 info@skillbridge.ua</p>
-        <p class="text-white">Telegram: @SkillBridge</p>
-        <p class="text-white">Instagram: @SkillBridgeUA</p>
+        <p class="text-white">📞 +380 731580935</p>
+        <p class="text-white">📧 info@3Go.ua</p>
+        <p class="text-white">Telegram: @3Go</p>
+        <p class="text-white">Instagram: @3Go</p>
       </div>
       <div>
         <h3>Інформація</h3>
         <a href="privac.html" class="block text-white hover:text-blue-300 transition duration-200">Політика конфіденційності</a>
       </div>
     </div>
-    <p class="text-center mt-8 text-white">© 2025 SkillBridge. Усі права захищено.</p>
+    <p class="text-center mt-8 text-white">© 2025 3Go. Усі права захищено.</p>
   </footer>
 
   <script>
