--- a/public/blog.html
+++ b/public/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Блог - SkillBridge</title>
+    <title>Блог - 3Go</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
         .menu-slide {
@@ -82,7 +82,7 @@
     <nav class="fixed top-0 left-0 w-full bg-gradient-to-r from-blue-700 to-purple-600 text-white py-4 z-50 shadow-2xl">
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center">
-                <a href="/" class="text-3xl font-extrabold tracking-tight">SkillBridge 🌟</a>
+                <a href="/" class="text-3xl font-extrabold tracking-tight">3Go 🌟</a>
                 <div class="hidden md:flex space-x-8">
                     <a href="home.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Головна</a>
                     <a href="about.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Про нас</a>
