--- a/public/course.html
+++ b/public/course.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Курси | SkillBridge</title>
+  <title>Курси | 3Go</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
@@ -85,7 +85,7 @@
   <!-- Навігація -->
   <nav class="fixed top-0 w-full bg-gradient-to-r from-blue-700 to-purple-600 text-white py-4 z-50 shadow-2xl">
     <div class="container mx-auto px-4 flex justify-between items-center">
-      <a href="/" class="text-2xl font-bold">SkillBridge 🌟</a>
+      <a href="/" class="text-2xl font-bold">3Go 🌟</a>
       <div class="hidden md:flex space-x-6">
         <a href="home.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Головна</a>
         <a href="about.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Про нас</a>
