--- a/public/home.html
+++ b/public/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SkillBridge - Онлайн-школа математики та програмування</title>
+    <title>3Go - Онлайн-школа математики та програмування</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
         .hero-bg {
@@ -69,7 +69,7 @@
     <nav class="fixed top-0 left-0 w-full bg-gradient-to-r from-blue-700 to-purple-600 text-white py-4 z-50 shadow-2xl">
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center">
-                <a href="/" class="text-3xl font-extrabold tracking-tight">SkillBridge 🌟</a>
+                <a href="/" class="text-3xl font-extrabold tracking-tight">3Go 🌟</a>
                 <div class="hidden md:flex space-x-8">
                     <a href="home.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Головна</a>
                     <a href="about.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Про нас</a>
@@ -110,17 +110,17 @@
         <div class="container mx-auto px-4">
             <div class="relative bg-gray-800 rounded-2xl p-8 shadow-2xl border-4 border-gradient-to-r from-blue-600 via-purple-500 to-pink-500 transform hover:scale-[1.02] transition-all duration-300">
                 <div class="absolute -top-4 left-1/2 transform -translate-x-1/2 bg-gradient-to-r from-blue-600 to-purple-500 text-white px-4 py-1 rounded-full text-sm font-semibold">
-                    SkillBridge
+                    3Go
                 </div>
                 <h2 class="text-4xl font-extrabold text-center mb-8 text-gray-100 tracking-tight">Хто ми? 🌟</h2>
                 <div class="space-y-6 text-gray-300 leading-relaxed">
                     <p class="text-lg flex items-start">
                         <span class="text-2xl mr-2">🚀</span>
-                        <span><strong>SkillBridge</strong> — це онлайн-школа, де математика та програмування оживають! Ми — команда захоплених викладачів, які не просто пояснюють, а надихають. Навчаємо дітей віком від <strong>10 до 18 років</strong>, допомагаємо зрозуміти складне, повірити в себе і отримати реальні результати.</span>
+                        <span><strong>3Go</strong> — це онлайн-школа, де математика та програмування оживають! Ми — команда захоплених викладачів, які не просто пояснюють, а надихають. Навчаємо дітей віком від <strong>10 до 18 років</strong>, допомагаємо зрозуміти складне, повірити в себе і отримати реальні результати.</span>
                     </p>
                     <p class="text-lg flex items-start">
                         <span class="text-2xl mr-2">🌉</span>
-                        <span>Ми створили SkillBridge, щоб стати <strong>містком між шкільною теорією і практичними навичками</strong>, які справді потрібні в житті. Ти можеш підтягнути математику, впевнено скласти НМТ або створити свою першу гру на Python — усе це можливо з нами.</span>
+                        <span>Ми створили 3Go, щоб стати <strong>містком між шкільною теорією і практичними навичками</strong>, які справді потрібні в житті. Ти можеш підтягнути математику, впевнено скласти НМТ або створити свою першу гру на Python — усе це можливо з нами.</span>
                     </p>
                     <p class="text-lg flex items-start">
                         <span class="text-2xl mr-2">💡</span>
