--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Вхід | SkillBridge</title>
+  <title>Вхід | 3Go</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
@@ -29,7 +29,7 @@
 <body class="bg-gray-900 text-gray-100">
   <nav class="fixed top-0 w-full bg-gradient-to-r from-blue-700 to-purple-600 text-white py-4 z-50 shadow-2xl">
     <div class="container mx-auto px-4 flex justify-between items-center">
-      <a href="/" class="text-2xl font-bold">SkillBridge 🌟</a>
+      <a href="/" class="text-2xl font-bold">3Go 🌟</a>
       <div class="hidden md:flex space-x-6">
         <a href="home.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Головна</a>
         <a href="about.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Про нас</a>
@@ -91,7 +91,7 @@
         <a href="privacy.html" class="block text-white hover:text-blue-300 transition duration-200">Політика конфіденційності</a>
       </div>
     </div>
-    <p class="text-center mt-8 text-white">© 2025 SkillBridge. Усі права захищено.</p>
+    <p class="text-center mt-8 text-white">© 2025 3Go. Усі права захищено.</p>
   </footer>
 
   <script>
