--- a/public/math.html
+++ b/public/math.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Математика | SkillBridge</title>
+  <title>Математика | 3Go</title>
   <meta name="description" content="Вивчайте математику з SkillBridge: курси для 1–11 класів, підготовка до НМТ, інтерактивні заняття онлайн.">
   <meta name="keywords" content="математика, підготовка до НМТ, ЗНО, курси математики, онлайн-навчання, алгебра, геометрія, логіка">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -99,7 +99,7 @@
   <!-- Навігація -->
   <nav class="fixed top-0 w-full bg-gradient-to-r from-blue-700 to-purple-600 text-white py-4 z-50 shadow-2xl">
     <div class="container mx-auto px-4 flex justify-between items-center">
-      <a href="/" class="text-2xl font-bold">SkillBridge 🌟</a>
+      <a href="/" class="text-2xl font-bold">3Go 🌟</a>
       <div class="hidden md:flex space-x-6">
         <a href="home.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Головна</a>
                     <a href="about.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Про нас</a>
@@ -252,7 +252,7 @@
         <a href="privac.html" class="block text-white hover:text-blue-300 transition duration-200">Політика конфіденційності</a>
       </div>
     </div>
-    <p class="text-center mt-8 text-white">© 2025 SkillBridge. Усі права захищено.</p>
+    <p class="text-center mt-8 text-white">© 2025 3Go. Усі права захищено.</p>
   </footer>
 
   <script>
