--- a/public/math_tests.html
+++ b/public/math_tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Математичні матеріали – SkillBridge</title>
+    <title>Математичні матеріали – 3Go</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -171,7 +171,7 @@
     <nav class="fixed top-0 left-0 w-full bg-gradient-to-r from-blue-700 to-purple-600 text-white py-4 z-50 shadow-2xl">
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center">
-                <a href="/" class="text-2xl sm:text-3xl font-extrabold tracking-tight">SkillBridge 🧮</a>
+                <a href="/" class="text-2xl sm:text-3xl font-extrabold tracking-tight">3Go 🧮</a>
                 <div class="hidden md:flex space-x-6">
                     <a href="home.html" class="text-base font-medium hover:text-blue-200 transition duration-200">Головна</a>
                     <a href="about.html" class="text-base font-medium hover:text-blue-200 transition duration-200">Про нас</a>
@@ -202,7 +202,7 @@
     <!-- Hero Section -->
     <section class="hero-bg text-center text-white">
         <div class="container mx-auto px-4 py-12 sm:py-16">
-            <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold mb-6 gradient-text">Математичні матеріали – SkillBridge</h1>
+            <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold mb-6 gradient-text">Математичні матеріали – 3Go</h1>
             <p class="text-lg sm:text-xl md:text-2xl mb-8 leading-relaxed">Навчайся з розумінням — від простого до складного! 🧠</p>
             <div class="flex flex-col sm:flex-row justify-center gap-4 sm:gap-6">
                 <a href="course.html" class="text-white px-6 sm:px-8 py-3 sm:py-4 rounded-xl text-base sm:text-lg font-semibold btn-cta">Доєднатися до наших курсів</a>
