--- a/public/privac.html
+++ b/public/privac.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Політика конфіденційності | SkillBridge</title>
+  <title>Політика конфіденційності | 3Go</title>
   <meta name="description" content="Дізнайтесь, як SkillBridge захищає ваші персональні дані та забезпечує конфіденційність під час навчання на курсах програмування та математики.">
   <meta name="keywords" content="політика конфіденційності, захист даних, SkillBridge, приватність, персональні дані">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -81,7 +81,7 @@
   <!-- Навігація -->
   <nav class="fixed top-0 w-full bg-gradient-to-r from-blue-700 to-purple-600 text-white py-4 z-50 shadow-2xl">
     <div class="container mx-auto px-4 flex justify-between items-center">
-      <a href="/" class="text-2xl font-bold">SkillBridge 🌟</a>
+      <a href="/" class="text-2xl font-bold">3Go 🌟</a>
       <div class="hidden md:flex space-x-6">
         <a href="home.html" class="text-lg font-medium hover:text-blue-300 transition duration-200">Головна</a>
         <a href="about.html" class="text-lg font-medium hover:text-blue-300 transition duration-200">Про нас</a>
