--- a/public/programming.html
+++ b/public/programming.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Програмування | SkillBridge</title>
+  <title>Програмування | 3Go</title>
   <meta name="description" content="Вивчайте програмування з SkillBridge: курси Scratch, Python, HTML/CSS/JS для дітей 9–17 років. Створюйте ігри, сайти та проєкти!">
   <meta name="keywords" content="програмування, Scratch, Python, HTML, CSS, JavaScript, курси для дітей, онлайн-навчання, кодинг">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -89,7 +89,7 @@
   <!-- Навігація -->
   <nav class="fixed top-0 w-full bg-gradient-to-r from-blue-700 to-purple-600 text-white py-4 z-50 shadow-2xl">
     <div class="container mx-auto px-4 flex justify-between items-center">
-      <a href="/" class="text-2xl font-bold">SkillBridge 🌟</a>
+      <a href="/" class="text-2xl font-bold">3Go 🌟</a>
       <div class="hidden md:flex space-x-6">
         <a href="home.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Головна</a>
         <a href="about.html" class="text-lg font-medium hover:text-blue-200 transition duration-200">Про нас</a>
