--- a/public/programming_tests.html
+++ b/public/programming_tests.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Матеріали для програмування – SkillBridge</title>
+    <title>Матеріали для програмування – 3Go</title>
     <meta name="description" content="Вивчайте програмування з BrainHub: курси Scratch, Python, HTML, CSS, JavaScript для всіх рівнів.">
     <meta name="keywords" content="програмування, Scratch, Python, HTML, CSS, JavaScript, онлайн-навчання, курси програмування">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -133,7 +133,7 @@
     <!-- Геройський блок -->
     <section class="hero-bg text-center text-white">
         <div class="container mx-auto px-4 py-16">
-            <h1 class="text-5xl md:text-6xl font-extrabold mb-6 gradient-text">Матеріали для програмування – SkillBridge</h1>
+            <h1 class="text-5xl md:text-6xl font-extrabold mb-6 gradient-text">Матеріали для програмування – 3Go</h1>
             <p class="text-xl md:text-2xl mb-10 leading-relaxed">Кодуй з розумінням — від простого до складного! 💻</p>
             <div class="flex flex-col sm:flex-row justify-center gap-6">
                 <a href="course.html" class="text-white px-8 py-4 rounded-xl text-lg font-semibold btn-cta">Доєднатися до наших курсів</a>
