--- a/public/about.html
+++ b/public/about.html
@@ -227,10 +227,11 @@
     <div class="container mx-auto px-4 grid grid-cols-1 md:grid-cols-3 gap-8">
       <div>
         <h3>Контакти</h3>
-        <p class="text-white">📞 +380 123 456 789</p>
-        <p class="text-white">📧 info@3Go.ua</p>
-        <p class="text-white">Telegram: @3Go</p>
-        <p class="text-white">Instagram: @3Go</p>
+        <p class="text-white">📞 +380 731 580 935</p>
+        <p class="text-white">📧 info 3goschool@gmail.com</p>
+        <p class="text-white">Telegram: 3goschool</p>
+        <p class="text-white">Instagram: 3goschool</p>
+        <p class="text-white">Instagram: 3goschool</p>
       </div>
       
       <div>
