--- a/public/account.html
+++ b/public/account.html
@@ -249,17 +249,18 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h4>Контакти</h4>
-                    <p>Телефон: +380 123 456 789</p>
-                    <p>Email: info@3Go.ua</p>
-                    <p>Telegram: @3Go</p>
-                    <p>Instagram: @3Go</p>
+                    <p class="text-white">📞 +380 731 580 935</p>
+                    <p class="text-white">📧 info 3goschool@gmail.com</p>
+                    <p class="text-white">Telegram: 3goschool</p>
+                    <p class="text-white">Instagram: 3goschool</p>
+                    <p class="text-white">Instagram: 3goschool</p>
                 </div>
                 <div class="footer-section">
                     <h4>Інформація</h4>
                     <a href="privacy.html">Політика конфіденційності</a>
                 </div>
             </div>
-            <p>© 2025 SkillBridge. Усі права захищено.</p>
+            <p>© 2025 3goschool. Усі права захищено.</p>
         </div>
     </footer>
 
