--- a/public/blog.html
+++ b/public/blog.html
@@ -144,10 +144,11 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div>
                     <h3 class="text-xl font-semibold mb-4">Контакти</h3>
-                    <p>📞 +380 123 456 789</p>
-                    <p>📧 info@skillbridge.ua</p>
-                    <p>Telegram: @SkillBridge</p>
-                    <p>Instagram: @SkillBridgeUA</p>
+                   <p class="text-white">📞 +380 731 580 935</p>
+                   <p class="text-white">📧 info 3goschool@gmail.com</p>
+                   <p class="text-white">Telegram: 3goschool</p>
+                   <p class="text-white">Instagram: 3goschool</p>
+                   <p class="text-white">Instagram: 3goschool</p>
                 </div>
                 <div>
                     <h3 class="text-xl font-semibold mb-4">Інформація</h3>
