--- a/public/home.html
+++ b/public/home.html
@@ -223,10 +223,11 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div>
                     <h3>Контакти</h3>
-                    <p>Телефон: +380 123 456 789</p>
-                    <p>Email: info@skillbridge.ua</p>
-                    <p>Telegram: @SkillBridge</p>
-                    <p>Instagram: @SkillBridgeUA</p>
+                    <p class="text-white">📞 +380 731 580 935</p>
+        <p class="text-white">📧 info 3goschool@gmail.com</p>
+        <p class="text-white">Telegram: 3goschool</p>
+        <p class="text-white">Instagram: 3goschool</p>
+        <p class="text-white">Instagram: 3goschool</p>
                 </div>
                 <div>
                     <h3>Інформація</h3>
