--- a/public/math_tests.html
+++ b/public/math_tests.html
@@ -366,9 +366,11 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6 sm:gap-8 text-center md:text-left">
                 <div>
                     <h3 class="text-lg font-semibold">Контакти</h3>
-                    <p class="text-white text-sm sm:text-base">📧 info:SkillBridgeUA@gmail.com</p>
-                    <p class="text-white text-sm sm:text-base">Telegram: @SkillBridgeUA</p>
-                    <p class="text-white text-sm sm:text-base">Instagram: @SkillBridgeUA</p>
+                    <p class="text-white">📞 +380 731 580 935</p>
+        <p class="text-white">📧 info 3goschool@gmail.com</p>
+        <p class="text-white">Telegram: 3goschool</p>
+        <p class="text-white">Instagram: 3goschool</p>
+        <p class="text-white">Instagram: 3goschool</p>
                 </div>
                 <div>
                     <h3 class="text-lg font-semibold">Інформація</h3>
