--- a/public/privac.html
+++ b/public/privac.html
@@ -207,10 +207,11 @@
     <div class="container mx-auto px-4 grid grid-cols-1 md:grid-cols-3 gap-8">
       <div>
         <h3>Контакти</h3>
-        <p class="text-white">📞 +380 123 456 789</p>
-        <p class="text-white">📧 info@skillbridge.ua</p>
-        <p class="text-white">Telegram: @SkillBridge</p>
-        <p class="text-white">Instagram: @SkillBridgeUA</p>
+        <p class="text-white">📞 +380 731 580 935</p>
+        <p class="text-white">📧 info 3goschool@gmail.com</p>
+        <p class="text-white">Telegram: 3goschool</p>
+        <p class="text-white">Instagram: 3goschool</p>
+        <p class="text-white">Instagram: 3goschool</p>
       </div>
       
     <p class="text-center mt-8 text-white">© 2025 SkillBridge. Усі права захищено.</p>
