--- a/public/programming_tests.html
+++ b/public/programming_tests.html
@@ -288,9 +288,11 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div>
                     <h3>Контакти</h3>
-                    <p class="text-white">📧 info:SkillBridgeUA@gmail.com</p>
-                    <p class="text-white">Telegram: @SkillBridgeUA</p>
-                    <p class="text-white">Instagram: @SkillBridgeUA</p>
+                    <p class="text-white">📞 +380 731 580 935</p>
+        <p class="text-white">📧 info 3goschool@gmail.com</p>
+        <p class="text-white">Telegram: 3goschool</p>
+        <p class="text-white">Instagram: 3goschool</p>
+        <p class="text-white">Instagram: 3goschool</p>
                 </div>
                 <div>
                     <h3 class="text-lg font-semibold">Інформація</h3>
