--- a/public/math.html
+++ b/public/math.html
@@ -2,6 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
+  <meta name="robots" content="noindex">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Математика | 3Go</title>
   <meta name="description" content="Вивчайте математику з SkillBridge: курси для 1–11 класів, підготовка до НМТ, інтерактивні заняття онлайн.">
