--- a/public/login_teachers.html
+++ b/public/login_teachers.html
@@ -94,7 +94,7 @@
         }
 
         try {
-          const response = await fetch('https://skillbridge-school-1.onrender.com/api/teacher-login', {
+          const response = await fetch('https://threego-school.onrender.com/api/teacher-login', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ email, password })
