--- a/public/account_teachers.html
+++ b/public/account_teachers.html
@@ -141,7 +141,7 @@
       // Функція для отримання даних студента за studentId
       const fetchStudentData = async (studentId) => {
         try {
-          const response = await fetch(`https://skillbridge-school-1.onrender.com/api/profile?studentId=${studentId}`, {
+          const response = await fetch(`https://threego-school.onrender/api/profile?studentId=${studentId}`, {
             method: 'GET',
             headers: {
               'Authorization': `Bearer ${token}`,
