--- a/public/account_teachers.html
+++ b/public/account_teachers.html
@@ -106,7 +106,7 @@
       const fetchTeacherProfile = async (retries = 3, delay = 1000) => {
         for (let i = 0; i < retries; i++) {
           try {
-            const response = await fetch('https://threego-school-math-and-programming.onrender.com/course.html/api/teacher-profile', {
+            const response = await fetch('https://threego-school-math-and-programming.onrender.com.html/api/teacher-profile', {
               method: 'GET',
               headers: {
                 'Authorization': `Bearer ${token}`,
@@ -141,7 +141,7 @@
       // Функція для отримання даних студента за studentId
       const fetchStudentData = async (studentId) => {
         try {
-          const response = await fetch(`https://threego-school.onrender/api/profile?studentId=${studentId}`, {
+          const response = await fetch(`https://threego-school-math-and-programming.onrender/api/profile?studentId=${studentId}`, {
             method: 'GET',
             headers: {
               'Authorization': `Bearer ${token}`,
