--- a/public/course.html
+++ b/public/course.html
@@ -330,7 +330,7 @@
         }
 
         try {
-          const response = await fetch('https://threego-school.onrender.com/api/purchase', {
+          const response = await fetch('https://threego-school-math-and-programming.onrender.com/api/purchase', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ name, contact, format, course, date })
