--- a/public/register.html
+++ b/public/register.html
@@ -119,7 +119,7 @@
         }
 
         try {
-          const response = await fetch('https://threego-school.onrender.com/api/register', {
+          const response = await fetch('https://threego-school-math-and-programming.onrender.com/api/register', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ name, email, password, date }),
