--- a/public/register_teachers.html
+++ b/public/register_teachers.html
@@ -104,7 +104,7 @@
         }
 
         try {
-          const response = await fetch('https://threego-school.onrender.com/api/teacher-register', {
+          const response = await fetch('https://threego-school-math-and-programming.onrender.com/api/teacher-register', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ name, email, password }),
