--- a/public/home.html
+++ b/public/home.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="-PXgJ7gi3dheljRjxrOm9gveSnLv5nn-bUw_vXtw5JA" />
     <title>3Go - Онлайн-школа математики та програмування</title>
+    <link rel="canonical" href="https://threego-school-math-and-programming.onrender.com" />
+
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
         .hero-bg {
