--- a/public/home.html
+++ b/public/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="qBcAnfWKHNx1Kq4wHBqWa_3x1zOIF-zusuU2XMjMq_k" />
     <title>3Go - Онлайн-школа математики та програмування</title>
-    <link rel="canonical" href="https://threego-school-math-and-programming.onrender.com" />
+    <link rel="canonical" href="https://threego-school-math-and-programming.onrender.com/home.html" />
 
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
