--- a/public/account.html
+++ b/public/account.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ваш профіль - 3Go</title>
+    <link rel="canonical" href="https://threego-school-math-and-programming.onrender.com/account.html" />
     <style>
         * {
             margin: 0;
