--- a/public/blog.html
+++ b/public/blog.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Language" content="uk">
     <title>Блог - 3Go</title>
+    <link rel="canonical" href="https://threego-school-math-and-programming.onrender.com/blog.html" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
         .menu-slide {
