--- a/public/privac.html
+++ b/public/privac.html
@@ -6,6 +6,7 @@
   <title>Політика конфіденційності | 3Go</title>
   <meta name="description" content="Дізнайтесь, як SkillBridge захищає ваші персональні дані та забезпечує конфіденційність під час навчання на курсах програмування та математики.">
   <meta name="keywords" content="політика конфіденційності, захист даних, SkillBridge, приватність, персональні дані">
+  <link rel="canonical" href="https://threego-school-math-and-programming.onrender.com/privac.html" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
