--- a/public/programming.html
+++ b/public/programming.html
@@ -8,6 +8,7 @@
   <meta name="keywords" content="програмування, Scratch, Python, HTML, CSS, JavaScript, курси для дітей, онлайн-навчання, кодинг">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="canonical" href="https://threego-school-math-and-programming.onrender.com/programming.html" />
   <style>
     body {
       font-family: 'Roboto', sans-serif;
