--- a/public/programming_tests.html
+++ b/public/programming_tests.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="програмування, Scratch, Python, HTML, CSS, JavaScript, онлайн-навчання, курси програмування">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="canonical" href="https://threego-school-math-and-programming.onrender.com/programming_tests.html" />
     <style>
         body {
             font-family: 'Roboto', sans-serif;
